--- a/rocco.html
+++ b/rocco.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="rocco.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-  <script src="script.js"></script>
+  <script defer src="rocco.js"></script>
 </head>
 <body>
 
@@ -58,39 +58,63 @@
     </div>
     <!--end of section 1-->
   </div>
-  <!-- Section 3 -->
+
+  <!-- Section 2 -->
+  <section class="section-2">
+    <h1 class="section-heading">popular meals for fattys</h1>
+    <div class="cards-container">
+        <div class="card">
+            <img src="../Rocco/pexels-jonathan-borba-2983099.jpg" class="card-img">
+            <h3 class="card-name">Western Diabties Burger $30.00</h3>
+            <button class="card-btn">Order now</button>
+        </div>
+        <div class="card">
+            <img src="../Rocco/pexels-alesia-kozik-6072492.jpg" class="card-img">
+            <h3 class="card-name">Chocolate Diarrhea Banana Pancakes $55.00</h3>
+            <button class="card-btn">Order now</button>
+        </div>
+        <div class="card">
+            <img src="../Rocco/pexels-valeria-boltneva-1893556.jpg" class="card-img">
+            <h3 class="card-name">Sweet Potato Fries for Fatty $78.00</h3>
+            <button class="card-btn">Order now</button>
+        </div>
+    </div>
+  </section>
+<!-- End of Section 2 -->
+  
+<!-- Section 3 -->
   <section class="section-3">
     <h1 class="section-heading">gallery</h1>
     <div class="gallery">
         <a href="#" class="gallery-link" title="Order Now">
             <img src="../Rocco/pexels-ash-376464.jpg" class="food-img">
-            <h3 class="food-name">Pancakes</h3>
+            <h3 class="food-name">Pancakes $36.00</h3>
             <p class="food-description">Buttermilk pancakes made ready-to-order. Eat it you fat tub!</p>
         </a>
         <a href="#" class="gallery-link" title="Order Now">
             <img src="../Rocco/pexels-ahmed-aqtai-635409.jpg" class="food-img">
-            <h3 class="food-name">Cupcakes</h3>
+            <h3 class="food-name">Cupcakes $90.00</h3>
             <p class="food-description">Stuff these sugary goodness things into your fat, stupid mouth hole!</p>
         </a>
         <a href="#" class="gallery-link" title="Order Now">
             <img src="../Rocco/pexels-naim-benjelloun-1618898.jpg" class="food-img">
-            <h3 class="food-name">Hummus</h3>
+            <h3 class="food-name">Hummus $150.00</h3>
             <p class="food-description">Eat it jew!</p>
         </a>
         <a href="#" class="gallery-link" title="Order Now">
             <img src="../Rocco/pexels-valeria-boltneva-1639557.jpg" class="food-img">
-            <h3 class="food-name">Hamburger</h3>
+            <h3 class="food-name">Hamburger $67.00</h3>
             <p class="food-description">Eat this cooked dead cow you sack of shit!</p>
         </a>
         <a href="#" class="gallery-link" title="Order Now">
             <img src="../Rocco/pexels-malidate-van-842142.jpg" class="food-img">
-            <h3 class="food-name">Salmon</h3>
+            <h3 class="food-name">Salmon $85.00</h3>
             <p class="food-description">It's pretty good I guess..I dunno.</p>
         </a>
         <a href="#" class="gallery-link" title="Order Now">
             <img src="../Rocco/pexels-cherisha-norman-5106004.jpg" class="food-img">
-            <h3 class="food-name">Vegetables</h3>
-            <p class="food-description">Come on you vegan pussy! Hope your'e ready for an ass-whooping after ordering this!</p>
+            <h3 class="food-name">Vegetables $70.00</h3>
+            <p class="food-description">You a rabiit or something? Get out of here rabbit!</p>
         </a>
     </div>
   </section>
