Changed the wordage

--- a/rocco.html
+++ b/rocco.html
@@ -4,8 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Roccos Kitchen</title>
-  <link rel="stylesheet" href="rocco.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
+  <link rel="stylesheet" href="rocco.css">
   <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
   <script defer src="rocco.js"></script>
 </head>
@@ -61,21 +61,21 @@
 
   <!-- Section 2 -->
   <section class="section-2">
-    <h1 class="section-heading">popular meals for fattys</h1>
+    <h1 class="section-heading">popular meals redy to go!</h1>
     <div class="cards-container">
         <div class="card">
             <img src="../Rocco/pexels-jonathan-borba-2983099.jpg" class="card-img">
-            <h3 class="card-name">Western Diabties Burger $30.00</h3>
+            <h3 class="card-name">Western Burger $30.00</h3>
             <button class="card-btn">Order now</button>
         </div>
         <div class="card">
             <img src="../Rocco/pexels-alesia-kozik-6072492.jpg" class="card-img">
-            <h3 class="card-name">Chocolate Diarrhea Banana Pancakes $55.00</h3>
+            <h3 class="card-name">Chocolate Banana Pancakes $55.00</h3>
             <button class="card-btn">Order now</button>
         </div>
         <div class="card">
             <img src="../Rocco/pexels-valeria-boltneva-1893556.jpg" class="card-img">
-            <h3 class="card-name">Sweet Potato Fries for Fatty $78.00</h3>
+            <h3 class="card-name">Sweet Potato Fries $78.00</h3>
             <button class="card-btn">Order now</button>
         </div>
     </div>
@@ -89,32 +89,32 @@
         <a href="#" class="gallery-link" title="Order Now">
             <img src="../Rocco/pexels-ash-376464.jpg" class="food-img">
             <h3 class="food-name">Pancakes $36.00</h3>
-            <p class="food-description">Buttermilk pancakes made ready-to-order. Eat it you fat tub!</p>
+            <p class="food-description">Buttermilk pancakes made ready-to-order. You know you want it!</p>
         </a>
         <a href="#" class="gallery-link" title="Order Now">
             <img src="../Rocco/pexels-ahmed-aqtai-635409.jpg" class="food-img">
             <h3 class="food-name">Cupcakes $90.00</h3>
-            <p class="food-description">Stuff these sugary goodness things into your fat, stupid mouth hole!</p>
+            <p class="food-description">Made form scratch cupcakes!</p>
         </a>
         <a href="#" class="gallery-link" title="Order Now">
             <img src="../Rocco/pexels-naim-benjelloun-1618898.jpg" class="food-img">
             <h3 class="food-name">Hummus $150.00</h3>
-            <p class="food-description">Eat it jew!</p>
+            <p class="food-description">Served with your choice of bread!</p>
         </a>
         <a href="#" class="gallery-link" title="Order Now">
             <img src="../Rocco/pexels-valeria-boltneva-1639557.jpg" class="food-img">
             <h3 class="food-name">Hamburger $67.00</h3>
-            <p class="food-description">Eat this cooked dead cow you sack of shit!</p>
+            <p class="food-description">made fresh with of day delivary meat!</p>
         </a>
         <a href="#" class="gallery-link" title="Order Now">
             <img src="../Rocco/pexels-malidate-van-842142.jpg" class="food-img">
             <h3 class="food-name">Salmon $85.00</h3>
-            <p class="food-description">It's pretty good I guess..I dunno.</p>
+            <p class="food-description">caught locally day of!</p>
         </a>
         <a href="#" class="gallery-link" title="Order Now">
             <img src="../Rocco/pexels-cherisha-norman-5106004.jpg" class="food-img">
             <h3 class="food-name">Vegetables $70.00</h3>
-            <p class="food-description">You a rabiit or something? Get out of here rabbit!</p>
+            <p class="food-description">served with your choice of dip and side!</p>
         </a>
     </div>
   </section>
@@ -123,8 +123,8 @@
   <!-- Section 4 -->
   <section class="section-4">
     <div class="section-4-text">
-        <h2 class="section-4-heading">Use your tubby fingers to try to type your email!</h2>
-        <p class="section-4-paragraph">Be the first fatty to know when new products hit!</p>
+        <h2 class="section-4-heading">join our e-maling list for special discounts!</h2>
+        <p class="section-4-paragraph">Be the first to know when new products hit!</p>
     </div>
     <form class="signup-form">
         <input type="email" class="signup-form-input" placeholder="Enter Your Email">
